DrugiKolokvjum/Moj/code-gen/micko.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body

    7 type: _TYPE

    8 parameter: %empty
    9          | type _ID

   10 $@3: %empty

   11 body: _LBRACKET variable_list $@3 statement_list _RBRACKET

   12 variable_list: %empty
   13              | variable_list variable

   14 variable: type _ID _SEMICOLON

   15 statement_list: %empty
   16               | statement_list statement

   17 statement: compound_statement
   18          | assignment_statement
   19          | if_statement
   20          | return_statement
   21          | petljaj_statement

   22 $@4: %empty

   23 @5: %empty

   24 $@6: %empty

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 _DO literal $@6 _COLON statement

   26 compound_statement: _LBRACKET statement_list _RBRACKET

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   28 num_exp: exp
   29        | num_exp _AROP exp

   30 exp: literal
   31    | _ID
   32    | function_call
   33    | _LPAREN num_exp _RPAREN

   34 literal: _INT_NUMBER
   35        | _UINT_NUMBER

   36 $@7: %empty

   37 function_call: _ID $@7 _LPAREN argument _RPAREN

   38 argument: %empty
   39         | num_exp

   40 if_statement: if_part
   41             | if_part _ELSE statement

   42 @8: %empty

   43 $@9: %empty

   44 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN statement

   45 rel_exp: num_exp _RELOP num_exp

   46 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 7
_IF (259) 44
_ELSE (260) 41
_RETURN (261) 46
_ID (262) 6 9 14 25 27 31 37
_INT_NUMBER (263) 34
_UINT_NUMBER (264) 35
_LPAREN (265) 6 33 37 44
_RPAREN (266) 6 33 37 44
_LBRACKET (267) 11 26
_RBRACKET (268) 11 26
_ASSIGN (269) 27
_SEMICOLON (270) 14 27 46
_AROP (271) 29
_RELOP (272) 45
ONLY_IF (273)
_PETLJAJ (274) 25
_OD (275) 25
_DO (276) 25
_COLON (277) 25
_OPSEGU (278) 25


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1, on right: 0
function_list (26)
    on left: 2 3, on right: 1 3
function (27)
    on left: 6, on right: 2 3
$@1 (28)
    on left: 4, on right: 6
$@2 (29)
    on left: 5, on right: 6
type (30)
    on left: 7, on right: 6 9 14
parameter (31)
    on left: 8 9, on right: 6
body (32)
    on left: 11, on right: 6
$@3 (33)
    on left: 10, on right: 11
variable_list (34)
    on left: 12 13, on right: 11 13
variable (35)
    on left: 14, on right: 13
statement_list (36)
    on left: 15 16, on right: 11 16 26
statement (37)
    on left: 17 18 19 20 21, on right: 16 25 41 44
petljaj_statement (38)
    on left: 25, on right: 21
$@4 (39)
    on left: 22, on right: 25
@5 (40)
    on left: 23, on right: 25
$@6 (41)
    on left: 24, on right: 25
compound_statement (42)
    on left: 26, on right: 17
assignment_statement (43)
    on left: 27, on right: 18
num_exp (44)
    on left: 28 29, on right: 27 29 33 39 45 46
exp (45)
    on left: 30 31 32 33, on right: 28 29
literal (46)
    on left: 34 35, on right: 25 30
function_call (47)
    on left: 37, on right: 32
$@7 (48)
    on left: 36, on right: 37
argument (49)
    on left: 38 39, on right: 37
if_statement (50)
    on left: 40 41, on right: 19
if_part (51)
    on left: 44, on right: 40 41
@8 (52)
    on left: 42, on right: 44
$@9 (53)
    on left: 43, on right: 44
rel_exp (54)
    on left: 45, on right: 44
return_statement (55)
    on left: 46, on right: 20


State 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4
    type           go to state 5


State 1

    7 type: _TYPE .

    $default  reduce using rule 7 (type)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7
    type      go to state 5


State 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 5

    6 function: type . _ID $@1 _LPAREN parameter _RPAREN $@2 body

    _ID  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 8

    6 function: type _ID . $@1 _LPAREN parameter _RPAREN $@2 body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 9

    6 function: type _ID $@1 . _LPAREN parameter _RPAREN $@2 body

    _LPAREN  shift, and go to state 10


State 10

    6 function: type _ID $@1 _LPAREN . parameter _RPAREN $@2 body

    _TYPE  shift, and go to state 1

    $default  reduce using rule 8 (parameter)

    type       go to state 11
    parameter  go to state 12


State 11

    9 parameter: type . _ID

    _ID  shift, and go to state 13


State 12

    6 function: type _ID $@1 _LPAREN parameter . _RPAREN $@2 body

    _RPAREN  shift, and go to state 14


State 13

    9 parameter: type _ID .

    $default  reduce using rule 9 (parameter)


State 14

    6 function: type _ID $@1 _LPAREN parameter _RPAREN . $@2 body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 15


State 15

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 . body

    _LBRACKET  shift, and go to state 16

    body  go to state 17


State 16

   11 body: _LBRACKET . variable_list $@3 statement_list _RBRACKET

    $default  reduce using rule 12 (variable_list)

    variable_list  go to state 18


State 17

    6 function: type _ID $@1 _LPAREN parameter _RPAREN $@2 body .

    $default  reduce using rule 6 (function)


State 18

   11 body: _LBRACKET variable_list . $@3 statement_list _RBRACKET
   13 variable_list: variable_list . variable

    _TYPE  shift, and go to state 1

    $default  reduce using rule 10 ($@3)

    type      go to state 19
    $@3       go to state 20
    variable  go to state 21


State 19

   14 variable: type . _ID _SEMICOLON

    _ID  shift, and go to state 22


State 20

   11 body: _LBRACKET variable_list $@3 . statement_list _RBRACKET

    $default  reduce using rule 15 (statement_list)

    statement_list  go to state 23


State 21

   13 variable_list: variable_list variable .

    $default  reduce using rule 13 (variable_list)


State 22

   14 variable: type _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 24


State 23

   11 body: _LBRACKET variable_list $@3 statement_list . _RBRACKET
   16 statement_list: statement_list . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 29
    _PETLJAJ   shift, and go to state 30

    statement             go to state 31
    petljaj_statement     go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 24

   14 variable: type _ID _SEMICOLON .

    $default  reduce using rule 14 (variable)


State 25

   44 if_part: _IF . _LPAREN @8 rel_exp $@9 _RPAREN statement

    _LPAREN  shift, and go to state 38


State 26

   46 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 43
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 27

   27 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 47


State 28

   26 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 15 (statement_list)

    statement_list  go to state 48


State 29

   11 body: _LBRACKET variable_list $@3 statement_list _RBRACKET .

    $default  reduce using rule 11 (body)


State 30

   25 petljaj_statement: _PETLJAJ . _ID $@4 _OPSEGU _OD literal @5 _DO literal $@6 _COLON statement

    _ID  shift, and go to state 49


State 31

   16 statement_list: statement_list statement .

    $default  reduce using rule 16 (statement_list)


State 32

   21 statement: petljaj_statement .

    $default  reduce using rule 21 (statement)


State 33

   17 statement: compound_statement .

    $default  reduce using rule 17 (statement)


State 34

   18 statement: assignment_statement .

    $default  reduce using rule 18 (statement)


State 35

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


State 36

   40 if_statement: if_part .
   41             | if_part . _ELSE statement

    _ELSE  shift, and go to state 50

    $default  reduce using rule 40 (if_statement)


State 37

   20 statement: return_statement .

    $default  reduce using rule 20 (statement)


State 38

   44 if_part: _IF _LPAREN . @8 rel_exp $@9 _RPAREN statement

    $default  reduce using rule 42 (@8)

    @8  go to state 51


State 39

   31 exp: _ID .
   37 function_call: _ID . $@7 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 36 ($@7)
    $default  reduce using rule 31 (exp)

    $@7  go to state 52


State 40

   34 literal: _INT_NUMBER .

    $default  reduce using rule 34 (literal)


State 41

   35 literal: _UINT_NUMBER .

    $default  reduce using rule 35 (literal)


State 42

   33 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 53
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 43

   29 num_exp: num_exp . _AROP exp
   46 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 54
    _AROP       shift, and go to state 55


State 44

   28 num_exp: exp .

    $default  reduce using rule 28 (num_exp)


State 45

   30 exp: literal .

    $default  reduce using rule 30 (exp)


State 46

   32 exp: function_call .

    $default  reduce using rule 32 (exp)


State 47

   27 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 56
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 48

   16 statement_list: statement_list . statement
   26 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _RBRACKET  shift, and go to state 57
    _PETLJAJ   shift, and go to state 30

    statement             go to state 31
    petljaj_statement     go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 49

   25 petljaj_statement: _PETLJAJ _ID . $@4 _OPSEGU _OD literal @5 _DO literal $@6 _COLON statement

    $default  reduce using rule 22 ($@4)

    $@4  go to state 58


State 50

   41 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _PETLJAJ   shift, and go to state 30

    statement             go to state 59
    petljaj_statement     go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 51

   44 if_part: _IF _LPAREN @8 . rel_exp $@9 _RPAREN statement

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 60
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    rel_exp        go to state 61


State 52

   37 function_call: _ID $@7 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 62


State 53

   29 num_exp: num_exp . _AROP exp
   33 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 63
    _AROP    shift, and go to state 55


State 54

   46 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 46 (return_statement)


State 55

   29 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    exp            go to state 64
    literal        go to state 45
    function_call  go to state 46


State 56

   27 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   29 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 65
    _AROP       shift, and go to state 55


State 57

   26 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 26 (compound_statement)


State 58

   25 petljaj_statement: _PETLJAJ _ID $@4 . _OPSEGU _OD literal @5 _DO literal $@6 _COLON statement

    _OPSEGU  shift, and go to state 66


State 59

   41 if_statement: if_part _ELSE statement .

    $default  reduce using rule 41 (if_statement)


State 60

   29 num_exp: num_exp . _AROP exp
   45 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 55
    _RELOP  shift, and go to state 67


State 61

   44 if_part: _IF _LPAREN @8 rel_exp . $@9 _RPAREN statement

    $default  reduce using rule 43 ($@9)

    $@9  go to state 68


State 62

   37 function_call: _ID $@7 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    $default  reduce using rule 38 (argument)

    num_exp        go to state 69
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46
    argument       go to state 70


State 63

   33 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 33 (exp)


State 64

   29 num_exp: num_exp _AROP exp .

    $default  reduce using rule 29 (num_exp)


State 65

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 27 (assignment_statement)


State 66

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU . _OD literal @5 _DO literal $@6 _COLON statement

    _OD  shift, and go to state 71


State 67

   45 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 39
    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41
    _LPAREN       shift, and go to state 42

    num_exp        go to state 72
    exp            go to state 44
    literal        go to state 45
    function_call  go to state 46


State 68

   44 if_part: _IF _LPAREN @8 rel_exp $@9 . _RPAREN statement

    _RPAREN  shift, and go to state 73


State 69

   29 num_exp: num_exp . _AROP exp
   39 argument: num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 39 (argument)


State 70

   37 function_call: _ID $@7 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 74


State 71

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD . literal @5 _DO literal $@6 _COLON statement

    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41

    literal  go to state 75


State 72

   29 num_exp: num_exp . _AROP exp
   45 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 55

    $default  reduce using rule 45 (rel_exp)


State 73

   44 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _PETLJAJ   shift, and go to state 30

    statement             go to state 76
    petljaj_statement     go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 74

   37 function_call: _ID $@7 _LPAREN argument _RPAREN .

    $default  reduce using rule 37 (function_call)


State 75

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal . @5 _DO literal $@6 _COLON statement

    $default  reduce using rule 23 (@5)

    @5  go to state 77


State 76

   44 if_part: _IF _LPAREN @8 rel_exp $@9 _RPAREN statement .

    $default  reduce using rule 44 (if_part)


State 77

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 . _DO literal $@6 _COLON statement

    _DO  shift, and go to state 78


State 78

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 _DO . literal $@6 _COLON statement

    _INT_NUMBER   shift, and go to state 40
    _UINT_NUMBER  shift, and go to state 41

    literal  go to state 79


State 79

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 _DO literal . $@6 _COLON statement

    $default  reduce using rule 24 ($@6)

    $@6  go to state 80


State 80

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 _DO literal $@6 . _COLON statement

    _COLON  shift, and go to state 81


State 81

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 _DO literal $@6 _COLON . statement

    _IF        shift, and go to state 25
    _RETURN    shift, and go to state 26
    _ID        shift, and go to state 27
    _LBRACKET  shift, and go to state 28
    _PETLJAJ   shift, and go to state 30

    statement             go to state 82
    petljaj_statement     go to state 32
    compound_statement    go to state 33
    assignment_statement  go to state 34
    if_statement          go to state 35
    if_part               go to state 36
    return_statement      go to state 37


State 82

   25 petljaj_statement: _PETLJAJ _ID $@4 _OPSEGU _OD literal @5 _DO literal $@6 _COLON statement .

    $default  reduce using rule 25 (petljaj_statement)
